# Image-Filter-Application_Task01

./: CMakeLists.txt  LICENSE  README.md  build.sh
Helpers/: image_utils.hpp  image_utils.py  styles.py
backend/: color_hybrid.cpp  edge_freq.cpp  hist_contrast.cpp  main_bindings.cpp  noise_filters.cpp
frontend/: main_window.py  tab_color_hybrid.py  tab_edge_freq.py  tab_hist_contrast.py  tab_noise_filters.py
